# multi-lang-starter

./: Readme.md
cpp/: .gitignore  CMakeLists.txt
csharp/SRC/: Class1.cs
go/: go.mod  main.go  main_test.go
java/: .gitignore
java/app/: build.gradle.kts
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/code/retreat/: App.kt  Greeting.kt  Reduce.kt
kotlin/src/test/kotlin/code/retreat/: GreetingTest.kt  ReduceTest.kt
python/: pyproject.toml
python/python/: reduce.py
python/tests/: test_reduce.py
typescript/: index.js  package-lock.json  package.json
typescript/src/: calc.ts  reduce.ts
typescript/test/: calc.spec.ts  reduce.spec.ts
