[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Khaled Souf <khaled.souf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mutatest = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
